// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Value component Single, with search 1`] = `
<div
  className="value"
>
  <input
    autoFocus={false}
    className="input"
    placeholder=""
    readOnly={false}
    tabIndex="0"
    value="ham"
  />
</div>
`;

exports[`Test Value component Single, without search 1`] = `
<div
  className="value"
>
  <input
    autoFocus={false}
    className="input"
    placeholder=""
    readOnly={true}
    tabIndex="0"
    value="Hamburger"
  />
</div>
`;
